--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<span class="comments">/**</span><br />
 				<span class="space"/><span class="comments"> * In the tasty universe of saucisses,</span><br />
 				<span class="space"/><span class="comments"> * Thomas spotted the shiniest sausage: Andi 🌭✨</span><br />
-				<span class="space"/><span class="comments"> * Here's their love story — juicy, funny, and full of flavor.</span><br />
+				<span class="space"/><span class="comments"> * Here's their love story : juicy, funny, and full of flavor.</span><br />
 				<span class="space"/><span class="comments"> */</span><br />
 				PetiteSaucisse thomas = <span class="keyword">new</span> PetiteSaucisse(<span class="string">"Thomas"</span>);<br />
 				PetiteSaucisse andi = <span class="keyword">new</span> PetiteSaucisse(<span class="string">"Andi"</span>);<br />
@@ -42,7 +42,7 @@
 				<span class="placeholder"/>andi.feed(thomas, "Asian Food");<br />
 				<span class="placeholder"/>if (loveLevel > MAX) break;<br />
 				}<br />
-				<span class="comments">// On February 17th, the big question… </span><br />
+				<span class="comments">// On February 14th, the big question… </span><br />
 				thomas.askGirlfriend(andi, <span class="string">"Will you be my sausage partner?"</span>);<br />
 				andi.shout(<span class="string">"MIAOUUU!"</span>);<br />
 				<span class="comments">// And the little sausage adventures continued...</span><br />
